--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <li><strong>For Good</strong> from <em>Wicked</em> for piano solo <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvMlNjMFF0a1R6M2s/view?usp=sharing" target="_blank" class="button pink-block ilabel">pdf in C major</a> <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvLWxvZFNHbllVUUU/view?usp=sharing" target="_blank" class="button pink-block ilabel">pdf in Db major</a> <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvR3FfZTlEbWt2VFk/view?usp=sharing" target="_blank" class="button pink-block ilabel">vocal lead</a></li>
                             <li><em>In progress:</em> <strong>Ghost</strong> by Justin Bieber, <strong>Blame Myself</strong> by Illenium and Tori Kelly</li>
                         </ul>
-                        <h5>Piano notations</h5>
+                        <h5>Piano transcriptions & notations</h5>
                         <ul>
                             <li><strong>Parmesan Cheese</strong> by Ben Lapidus, lead sheet <a href="https://drive.google.com/file/d/1QLSvNDBbB4EXPwXp3F-fZfWD5EcDNbj-/view?usp=sharing" target="_blank" class="button pink-block ilabel">pdf</a></li>
                             <li><strong>Everglow</strong> by Coldplay, right-hand only <a href="https://drive.google.com/file/d/1Q4bPGIXIBAwOgBzS5Skkhe5I78ISoCGj/view?usp=sharing" target="_blank" class="button pink-block ilabel">pdf</a></li>
