--- a/trains/index.html
+++ b/trains/index.html
@@ -369,7 +369,7 @@
 
         // Bike
 
-        $.getJSON('http://api.citybik.es/capital-bikeshare.json', function(data) {
+        $.getJSON('https://api.citybik.es/capital-bikeshare.json', function(data) {
             stations = [126, 482, 609];
             names = ['23 & E St', 'Va. & 25 St', '22 & H St']
             className = "bike-available"
