--- a/trains/index.html
+++ b/trains/index.html
@@ -7,6 +7,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@200;400;600&display=swap" rel="stylesheet">
     <style>
+
+        @media screen and (min-width: 1700px) {
+            body {
+                font-size: 120%;
+            }
+
+            h1 {
+                font-size: 275%;
+            }
+
+            .train-node, .train-node.line-empty {
+                height: 100px;
+            }
+        }
+
+        @media screen and (max-width: 1400px) {
+            .column {
+                width: calc(100% - 56px);
+            }
+        }
+
         body {
             font-family: 'IBM Plex Sans Condensed';
             background-color: #EEEEEE;
@@ -20,7 +41,7 @@
 
         h1 {
             margin-left: 24px;
-            font-size: 150%;
+            font-size: 275%;
             margin-bottom: 12px;
             text-transform: uppercase;
             font-color: gray;
