--- a/trains/index.html
+++ b/trains/index.html
@@ -168,11 +168,11 @@
 
         @media screen and (min-width: 1700px) {
             body {
-                font-size: 120%;
+                font-size: 115%;
             }
 
             h1 {
-                font-size: 275%;
+                font-size: 250%;
             }
 
             .train-node, .train-node.line-empty {
@@ -182,10 +182,10 @@
 
         @media screen and (max-width: 1400px) {
             .column {
-                width: calc(100% - 56px);
+                width: calc(100% - 56px) !important;
             }
         }
-        
+
     </style>
 </head>
 <body>
