--- a/trains/index.html
+++ b/trains/index.html
@@ -256,7 +256,7 @@
         </div>
         <div class="column">
             <span class="info-panel-time">It's 12:00 AM on Monday, January 1, 1970.</span>
-            <span class="info-panel-weather">100° with a chance of meatballs.</span>
+            <span class="info-panel-weather">100° with a chance of Lisa Gargiulo's turkey meatballs.</span>
         </div>
     </div>
     
