--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="">
                     <img id="bio-prof-pic" src="/media/profile.jpg">
                     <h1>Daniel Zhao</h1>
-                    <h2>I'm a paralegal at the <a href="https://ftc.gov">Federal Trade Commission</a>, supporting the Office of Chair Lina Khan. I'm interested in how data and technology shape concentrations of power in society.</h2>
+                    <h2>I'm a Special Assistant in the Office of Chair Khan at the <a href="https://ftc.gov">FTC</a>. I'm interested in how data and technology shape concentrations of power in society.</h2>
                     <h2>I graduated from Yale, where I studied data science and global affairs. Previously, I was with <a href="https://yaledailynews.com">Yale Daily News</a>, <a href="https://techtalentproject.org/">Tech Talent Project</a>, Facebook, <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" target="_blank">Coding It Forward</a>, <a href="https://medium.com/louisville-metro-opi2/data-driven-governance-reflecting-on-opi2-bdd324aefbdc" target="_blank">Louisville Office of Civic Innovation</a>, and others. I wrote my senior thesis on building ethics into data science curricula.</h2>
                     <h2>I'm always down to chat. Get in touch via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
                 </div>
@@ -36,8 +36,8 @@
                         <h4>More about me</h4>
                     </div>
                     <div class="intro-text">
-                        <p>I'm passionate about tech policy, antitrust, civic tech, data visualization, and equitable and sustainable transportation. I believe that strong public institutions should play a key role in addressing society's most pressing challenges. And, despite my statistics background, I believe that numbers seldom capture the entire story.</p>
-                        <p>In my spare time, I take photos, ride subways, and blend smoothies. I'm working on a few updates to this site, but in the meantime, feel free to check out <a href="http://photos.danielzhao.com">my photography</a>.</p>    
+                        <p>I'm passionate about antitrust, privacy, civic tech, and public infrastructure. I believe that strong public institutions should play a key role in addressing society's most pressing challenges. And, despite my statistics background, I believe that numbers seldom capture the entire story.</p>
+                        <p>In my spare time, I take photos, ride subways, try new bike lanes, and blend smoothies. I'm working on a few updates to this site, but in the meantime, feel free to check out <a href="http://photos.danielzhao.com">my photography</a>.</p>    
                     </div>
                 </div>
                 <div class="photo-preview">
