--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="">
                     <img id="bio-prof-pic" src="/media/profile.jpg">
                     <h1>Daniel Zhao</h1>
-                    <h2>I'm a Special Assistant in the Office of Chair Khan at the <a href="https://ftc.gov">Federal Trade Commission</a>. I'm interested in how data and technology shape concentrations of power in society.</h2>
+                    <h2>I'm a Special Assistant in the Office of Chair Khan at the <a href="https://ftc.gov">FTC</a>. I'm interested in how data and technology shape concentrations of power in society.</h2>
                     <h2>I graduated from Yale, where I studied data science and global affairs. Previously, I was with <a href="https://yaledailynews.com">Yale Daily News</a>, <a href="https://techtalentproject.org/">Tech Talent Project</a>, Facebook, <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" target="_blank">Coding It Forward</a>, <a href="https://medium.com/louisville-metro-opi2/data-driven-governance-reflecting-on-opi2-bdd324aefbdc" target="_blank">Louisville Office of Civic Innovation</a>, and others. I wrote my senior thesis on building ethics into data science curricula.</h2>
                     <h2>I'm always down to chat. Get in touch via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
                 </div>
@@ -50,7 +50,7 @@
                             <a href="https://photos.danielzhao.com/newyork" class="button">
                                 <div class="photo-container">
                                     <div class="photo-text">New York City</div>
-                                    <img src="/media/DZ_20220917_1832_0089.jpg">
+                                    <img src="/media/DZ_20201128_0116_1768A.jpg">
                                 </div>
                             </a>
                         </div>
