--- a/trains/index.html
+++ b/trains/index.html
@@ -39,7 +39,8 @@
         .transit-unit {
             background-color: white;
             margin: 12px;
-            border-radius: 4px;
+            margin-bottom: 24px;
+            border-radius: 12px;
             padding: 16px;
         }
 
@@ -127,7 +128,7 @@
             padding: 16px 20px;
             margin: 8px;
             border-radius: 8px;
-            height: 120px;
+            height: 116px;
             width: calc(33.3% - 54px);
         }
 
@@ -148,18 +149,19 @@
         }
 
         .train-node-time {
-            font-size: 550%;
+            font-size: 525%;
             font-weight: bold;
             line-height: 100%;
         }
 
         .train-node-label {
             text-transform: uppercase;
-            font-size: 175%;
+            font-size: 150%;
         }
 
         .train-node-dest {
-            font-size: 200%;
+            font-size: 175%;
+            letter-spacing: -1px;
             display: block;
         }
 
@@ -185,7 +187,7 @@
             }
 
             .train-node, .train-node.line-empty {
-                height: 144px;
+                height: 132px;
             }
         }
 
@@ -244,7 +246,7 @@
                 <div class="train-node-wrapper" id="conn-northbound">
                 </div>
                 <div class="section-header">
-                    <h2>18 & Calif. Ave NW</h2>
+                    <h2>18th & Calif. Ave NW</h2>
                     <span class="section-header-times">
                         <!-- <img src="https://cdn-icons-png.flaticon.com/512/499/499693.png"> -->
                         <span>11 min</span>
