--- a/trains/index.html
+++ b/trains/index.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Overpass';
@@ -16,16 +16,16 @@
 
         h1 {
             margin-left: 24px;
-            margin-bottom: 0;
+            margin-bottom: 12px;
             text-transform: uppercase;
-            letter-spacing: -2px;
+            letter-spacing: -1px;
         }
 
         .current-time {
             color: #16b9ff;
-            font-size: 275%;
-            margin-right: 12px;
+            font-size: 325%;
             font-weight: 800;
+            margin-right: 12px;
         }
 
         .current-date {
