--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                     <h1>Daniel Zhao</h1>
                     <h2>I work on economic policy and corporate power.</h2>
                     <h2>Let's connect via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
-                    <p>I'm currently at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</p>
-                    <p>I'm passionate antitrust, tech policy, urban planning, and public infrastructure. I believe that strong public institutions should play a key role in addressing society's most pressing challenges. And, despite my statistics background, I believe that numbers seldom capture the entire story.</p>
+                </div>
+                <div class="cols">
+                    <p>I'm currently an advisor at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</p>
+                    <p>I'm passionate about antitrust, tech policy, urban planning, and public infrastructure. I believe that strong public institutions should play a key role in addressing society's most pressing challenges. And, despite my statistics background, I believe that numbers seldom capture the entire story.</p>
                 </div>
                 <!--
                 <div class="photo-preview">
