--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="wide intro">
                 <div class="">
                     <h1>Daniel Zhao</h1>
-                    <h2>I work on economic policy and corporate power.</h2>
+                    <h2>I work on economic policy and corporate power. I'm currently an advisor at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</h2>
+                    <h2>In my spare time, I like to take <a href="http://photos.danielzhao.com">photos</a>. I'm also <a href="http://humanbuilt.substack.com">writing</a> about the human stories behind our infrastructure.</h2>
                     <h2>Let's connect via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
                 </div>
-                <div class="cols">
-                    <p>I'm currently an advisor at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</p>
+                <div class="intro-text">
                     <p>I'm passionate about antitrust, tech policy, urban planning, and public infrastructure. I believe that strong public institutions should play a key role in addressing society's most pressing challenges. And, despite my statistics background, I believe that numbers seldom capture the entire story.</p>
                 </div>
                 <!--
