--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <main>
             <div class="wide intro">
                 <div class="">
+                    <img id="bio-prof-pic" src="/media/profile.jpg">
                     <h1>Daniel Zhao</h1>
                     <h2>I work on economic policy and corporate power. I'm currently an advisor at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</h2>
                     <h2>In my spare time, I like to take <a href="http://photos.danielzhao.com">photos</a>. I'm also <a href="http://humanbuilt.substack.com">writing</a> about the human stories behind our infrastructure.</h2>
