--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <div class="">
                     <img id="bio-prof-pic" src="/media/profile.jpg">
                     <h1>Daniel Zhao</h1>
-                    <h2>I work on economic policy and corporate power. I'm currently an advisor at the FTC. In a past life, I was a data scientist, building tools to strengthen government services.</h2>
-                    <h2>In my spare time, I like to take <a href="http://photos.danielzhao.com">photos</a>. I'm also <a href="http://humanbuilt.substack.com">writing</a> about the human stories behind our infrastructure.</h2>
+                    <h2>I work on economic policy and corporate power.</h2>
+                    <h2>I'm currently an advisor at the FTC, building coalitions around antitrust and consumer protection. In a past life, I was a data scientist, developing tools to modernize government services.</h2>
+                    <h2>In my spare time, I like to take <a href="http://photos.danielzhao.com">photos</a>. I'm also working on a <a href="http://humanbuilt.substack.com">blog</a> documenting the human stories behind infrastructure.</h2>
                     <h2>Let's connect via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
                 </div>
                 <!--
