--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
+        <header>
+            <div id="siteTitle">
+                <a href="/">Daniel Zhao</a>
+            </div>
+            <nav>
+                {% include nav.html %}
+            </nav>
+        </header>
         <main>
             <div class="wide intro">
                 <div class="">
