--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     </head>
     <body>
         <header>
-            <div id="siteTitle">
-                <a href="/">Daniel Zhao</a>
-            </div>
             <nav>
-                {% include nav.html %}
+                <a href="/">Home</a>
+                <a href="http://photos.danielzhao.com">Photos</a>
+                <a href="http://humanbuilt.substack.com">Blog →</a>
             </nav>
         </header>
         <main>
