--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <header>
             <nav>
-                <a href="/">Home</a>
+                <a href="/" class="active">Home</a>
                 <a href="http://photos.danielzhao.com">Photos</a>
                 <a href="http://humanbuilt.substack.com">Blog →</a>
             </nav>
