--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img id="bio-prof-pic" src="/media/profile.jpg">
                     <h1>Daniel Zhao</h1>
                     <h2>I work on economic policy and corporate power.</h2>
-                    <h2>I'm currently an advisor to FTC Chair Lina Khan, building coalitions around antitrust and consumer protection. In a past life, I was a data scientist, developing tools to modernize government services.</h2>
+                    <h2>Most recently, I was an advisor to FTC Chair Lina Khan, building coalitions around antitrust and consumer protection issues. In a past life, I was a data scientist, developing tools to modernize government services.</h2>
                     <h2>In my spare time, I like to take <a href="http://photos.danielzhao.com">photos</a>. I'm also working on a <a href="http://humanbuilt.substack.com">blog</a> documenting the human stories behind infrastructure.</h2>
                     <h2>Let's connect via <a href="mailto:daniel@danielzhao.com">email</a>, <a href="https://twitter.com/iamdanzhao">Twitter</a>, or <a href="https://linkedin.com/in/iamdanzhao">LinkedIn</a>.</h2>
                 </div>
